# ML_Kubernetes_EKS

./: .gitignore  Dockerfile  README.md  app.py  deployment.yaml  model.joblib  neptune_utils.py  pyproject.toml  test_endpoint.py
.github/workflows/: deploy.yaml
unit-tests/: test_app.py
